@@ -1,3 +1,8 @@
+2003-06-19  Nick Garnett  <nickg@balti.calivar.com>
+
+	* src/hal_if.c (delay_us): Reorganized to cope with high frequency
+	timers by eliminating a source of arithmetic overflow. 
+
 2003-05-06  Mark Salter  <msalter@redhat.com>
 
 	* src/hal_stub.c (handle_exception_exit): Call sys_profile_reset from
